--- a/tp4pv/src/App.css
+++ b/tp4pv/src/App.css
@@ -32,7 +32,7 @@ button {
   font-size: 1rem;
   cursor: pointer;
   transition: background 0.2s, transform 0.2s;
-  margin: 4px;
+  margin-left: 40%;
   box-shadow: 0 1px 4px rgba(0,0,0,0.15);
 }
 .boton {
