--- a/tp4pv/src/App.css
+++ b/tp4pv/src/App.css
@@ -44,7 +44,7 @@ button {
   cursor: pointer;
   transition: background 0.2s, transform 0.2s;
   box-shadow: 0 1px 4px rgba(0,0,0,0.15);
-  margin-left: 40px;
+  margin: 5px;
 }
 
 button:hover, button:focus {
